--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -8,17 +8,16 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=DP-1,2560x1080@75,3840x0,1,bitdepth,10,transform,1
-monitor=HDMI-A-1,3840x2160@60,0x0,1,bitdepth,10
+monitor=DP-1,2560x1080@75,3840x0,1,transform,1
+monitor=HDMI-A-1,3840x2160@60,0x0,1
 workspace =10,monitor:DP-1, default:true
 workspace =1,monitor:HDMI-A-1, default:true
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar & hyprpaper & dunst & nm-applet & foot --server & wl-gammarelay-rs run
+exec-once = waybar & hyprpaper & dunst & nm-applet & wl-gammarelay-rs run
 exec-once=/usr/libexec/polkit-gnome-authentication-agent-1 &
-exec-once=/home/sid/hypr.sh &
 exec-once=hyprctl setcursor 'Capitaine Cursors (Gruvbox) - White' 32
 exec-once= [workspace 10;silent;noanim] /opt/discord/Discord --enable-features=UseOzonePlatform --ozone-platform=wayland
 exec-once= [workspace 10;silent;noanim] teams-for-linux
@@ -90,21 +89,12 @@ dwindle {
     preserve_split = true # you probably want this
 }
 
-master {
-    # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
-}
 
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     workspace_swipe = false
 }
 
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:epic-mouse-v1 {
-    sensitivity = -0.5
-}
 
 misc {
     disable_hyprland_logo = true
