--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,4 +1,4 @@
-preload = /home/sid/walls/679530.jpg
-wallpaper = HDMI-A-1,/home/sid/walls/679530.jpg
+preload = /home/sid/.config/gruvbox_astro.jpg
+wallpaper = HDMI-A-1,/home/sid/.config/gruvbox_astro.jpg
 
 
